FIX: AI helper not being shown on mobile view (#749)

--- a/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
+++ b/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
@@ -610,3 +610,7 @@
 .fk-d-menu[data-identifier="ai-composer-helper-menu"] {
   z-index: z("composer", "dropdown");
 }
+
+.mobile-view .fk-d-menu[data-identifier="ai-composer-helper-menu"] {
+  z-index: z("mobile-composer");
+}
